// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelatedSystems component renders correctly when scoringweight equal & names equal 1`] = `
<div>
  <div
    class="Section Section--alabaster"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root title title Typography Typography--underline MuiTypography-h2"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-1 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                role="button"
                tabindex="0"
              >
                <img
                  alt="system-1"
                  class="header-picture Media Media--contain"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="body"
                >
                  <h5
                    class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h5"
                  >
                    system-1
                  </h5>
                  <div
                    class="children text"
                  >
                    system-desc
                  </div>
                  <div
                    class="footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-101 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-104"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-1 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                role="button"
                tabindex="0"
              >
                <img
                  alt="system-1"
                  class="header-picture Media Media--contain"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="body"
                >
                  <h5
                    class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h5"
                  >
                    system-1
                  </h5>
                  <div
                    class="children text"
                  >
                    system-desc
                  </div>
                  <div
                    class="footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-101 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-104"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with no systems 1`] = `
<div>
  <div
    class="Section Section--alabaster"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root title title Typography Typography--underline MuiTypography-h2"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with scoringweight 1`] = `
<div>
  <div
    class="Section Section--alabaster"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root title title Typography Typography--underline MuiTypography-h2"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-Name - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                role="button"
                tabindex="0"
              >
                <img
                  alt="system-Name"
                  class="header-picture Media Media--contain"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="body"
                >
                  <h5
                    class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h5"
                  >
                    system-Name
                  </h5>
                  <div
                    class="children text"
                  >
                    system-desc
                  </div>
                  <div
                    class="footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-61 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-64"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-Name - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                role="button"
                tabindex="0"
              >
                <img
                  alt="system-Name"
                  class="header-picture Media Media--contain"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="body"
                >
                  <h5
                    class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h5"
                  >
                    system-Name
                  </h5>
                  <div
                    class="children text"
                  >
                    system-desc
                  </div>
                  <div
                    class="footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-61 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-64"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with scoringweight equal & names sorted opposite 1`] = `
<div>
  <div
    class="Section Section--alabaster"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root title title Typography Typography--underline MuiTypography-h2"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-1 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                role="button"
                tabindex="0"
              >
                <img
                  alt="system-1"
                  class="header-picture Media Media--contain"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="body"
                >
                  <h5
                    class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h5"
                  >
                    system-1
                  </h5>
                  <div
                    class="children text"
                  >
                    system-desc
                  </div>
                  <div
                    class="footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-121 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-124"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-2 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                role="button"
                tabindex="0"
              >
                <img
                  alt="system-2"
                  class="header-picture Media Media--contain"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="body"
                >
                  <h5
                    class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h5"
                  >
                    system-2
                  </h5>
                  <div
                    class="children text"
                  >
                    system-desc
                  </div>
                  <div
                    class="footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-121 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-124"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with scoringweight equal 1`] = `
<div>
  <div
    class="Section Section--alabaster"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root title title Typography Typography--underline MuiTypography-h2"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-Name - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                role="button"
                tabindex="0"
              >
                <img
                  alt="system-Name"
                  class="header-picture Media Media--contain"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="body"
                >
                  <h5
                    class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h5"
                  >
                    system-Name
                  </h5>
                  <div
                    class="children text"
                  >
                    system-desc
                  </div>
                  <div
                    class="footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-81 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-84"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-Name - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                role="button"
                tabindex="0"
              >
                <img
                  alt="system-Name"
                  class="header-picture Media Media--contain"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="body"
                >
                  <h5
                    class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h5"
                  >
                    system-Name
                  </h5>
                  <div
                    class="children text"
                  >
                    system-desc
                  </div>
                  <div
                    class="footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-81 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-84"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with systems 1`] = `
<div>
  <div
    class="Section Section--alabaster"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root title title Typography Typography--underline MuiTypography-h2"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-Name - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                role="button"
                tabindex="0"
              >
                <img
                  alt="system-Name"
                  class="header-picture Media Media--contain"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="body"
                >
                  <h5
                    class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h5"
                  >
                    system-Name
                  </h5>
                  <div
                    class="children text"
                  >
                    system-desc
                  </div>
                  <div
                    class="footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-4"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly without categories 1`] = `
<div>
  <div
    class="Section Section--alabaster"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root title title Typography Typography--underline MuiTypography-h2"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-Name - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                role="button"
                tabindex="0"
              >
                <img
                  alt="system-Name"
                  class="header-picture Media Media--contain"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="body"
                >
                  <h5
                    class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h5"
                  >
                    system-Name
                  </h5>
                  <div
                    class="children text"
                  >
                    system-desc
                  </div>
                  <div
                    class="footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-24"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders systems correctly without classifications 1`] = `
<div>
  <div
    class="Section Section--alabaster"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root title title Typography Typography--underline MuiTypography-h2"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"system-Name - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/path/\\"}"
                href="/en/s/path/"
                role="button"
                tabindex="0"
              >
                <img
                  alt="system-Name"
                  class="header-picture Media Media--contain"
                  src="http://localhost:8000/image-main-source.jpg"
                />
                <div
                  class="body"
                >
                  <h5
                    class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h5"
                  >
                    system-Name
                  </h5>
                  <div
                    class="children text"
                  >
                    system-desc
                  </div>
                  <div
                    class="footer"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-41 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-44"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SystemCard renders correctly with related system 1`] = `
<div>
  <div
    class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
  >
    <a
      aria-disabled="false"
      class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
      data-gtm="{\\"id\\":\\"gtm-id\\"}"
      href="/en/related-system-path/"
      role="button"
      tabindex="0"
    >
      <img
        alt="related-ssytem-name"
        class="header-picture Media Media--contain"
        src="http://localhost:8000/image-main-source.jpg"
      />
      <div
        class="body"
      >
        <h5
          class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h5"
        >
          related-ssytem-name
        </h5>
        <div
          class="children text"
        >
          related-short-desc
        </div>
        <div
          class="footer"
        >
          <button
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-161 MuiButton-outlined MuiButton-outlinedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label buttonStyles-label-164"
            >
              MC: sdp.system.readMore
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </a>
  </div>
</div>
`;

exports[`SystemCard renders correctly with system from elasticsearch 1`] = `
<div>
  <div
    class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
  >
    <a
      aria-disabled="false"
      class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
      data-gtm="{\\"id\\":\\"gtm-id\\"}"
      href="/en/s/code-name-hashed-code/"
      role="button"
      tabindex="0"
    >
      <img
        alt="name"
        class="header-picture Media Media--contain"
        src="http://localhost:8000/mainSource"
      />
      <div
        class="body"
      >
        <h5
          class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h5"
        >
          name
        </h5>
        <div
          class="children text"
        >
          Short description
        </div>
        <div
          class="footer"
        >
          <button
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-141 MuiButton-outlined MuiButton-outlinedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label buttonStyles-label-144"
            >
              MC: sdp.system.readMore
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </a>
  </div>
</div>
`;
